[gd_scene load_steps=3 format=3 uid="uid://bdmnr5wbwsysp"]

[ext_resource type="Script" uid="uid://fcdthpt33dgb" path="res://scenes/UI/level_hud.gd" id="1_qxveu"]
[ext_resource type="PackedScene" uid="uid://cayqak7t51rye" path="res://scenes/components/clock/clock.tscn" id="2_l4s1o"]

[node name="LevelHUD" type="CanvasLayer"]
script = ExtResource("1_qxveu")

[node name="lbl_score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 110
text = "1000"

[node name="lbl_logs" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -636.0
offset_bottom = 84.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 61
text = "Tech points: "
uppercase = true

[node name="lbl_log_message" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -501.0
offset_top = 72.135
offset_bottom = 136.135
grow_horizontal = 0
theme_override_font_sizes/font_size = 46
uppercase = true

[node name="lbl_lifes" type="Label" parent="."]
offset_top = 27.605
offset_right = 192.0
offset_bottom = 132.605
theme_override_font_sizes/font_size = 76
text = "Lifes:"

[node name="lbl_life_value" type="Label" parent="."]
offset_left = 250.0
offset_right = 313.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 111
text = "0"
horizontal_alignment = 2

[node name="lbl_clock_value" type="Label" parent="."]
offset_left = 400.0
offset_right = 621.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 111
text = "0:00"
horizontal_alignment = 2

[node name="Clock" parent="." instance=ExtResource("2_l4s1o")]
